--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,9 +18,9 @@
       </nav>
     </header>
     <section class="hero">
-      <h2></h2>
+      <h2>Projeto Página Pessoal</h2>
       <img src="" alt="" />
-      <button type="button"></button>
+      <button type="button">CLICK</button>
     </section>
     <section class="sobre min">
       <p>
@@ -53,7 +53,13 @@
         <div class = "cards"></div>
     </section>
     <section class="rotina">
-        <table></table>
+        <table>
+          <thead>
+            <tr>
+              <th>Dia</th>
+            </tr>
+          </thead>
+        </table>
     </section>
     <footer></footer>
   </body>
