--- a/index.html
+++ b/index.html
@@ -3,64 +3,127 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <h1>Luiz Henrique Lima da Silva</h1>
-      <img src="" alt="" />
       <nav>
+        <img src="" alt="Luiz Henrique Lima da Silva" />
+        <h1>Luiz Henrique Lima da Silva</h1>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><i class="fa-solid fa-book"></i> <a href="#home">Inicio</a></li>
+          <li><i class="fa-solid fa-user"></i> <a href="#about">Sobre</a></li>
+          <li>
+            <i class="fa-solid fa-envelope"></i> <a href="#contact">Contato</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <section class="hero">
-      <h2>Projeto Página Pessoal</h2>
-      <img src="" alt="" />
-      <button type="button">CLICK</button>
-    </section>
-    <section class="sobre min">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-        doloremque voluptatibus similique quia sunt aut tenetur, non, voluptas
-        earum accusantium iure dolorem ex reprehenderit incidunt sequi
-        consectetur, hic voluptatum sed.
-      </p>
-    </section>
-    <section class="curiosidades">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </section>
-    <section class="causos">
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-        accusamus rerum, quas, cumque repellendus at vel deleniti a totam, nihil
-        et atque quia quaerat nam quo harum ipsum quibusdam id!
-      </p>
-    </section>
-    <section class="portfolio">
-        <div class = "cards"></div>
-        <div class = "cards"></div>
-        <div class = "cards"></div>
-        <div class = "cards"></div>
-    </section>
-    <section class="rotina">
+
+    <main>
+      <section class="hero">
+        <div>
+          <h2>Projeto Página Pessoal</h2>
+          <button>CLICK</button>
+        </div>
+        <img src="images.png" class="banner" />
+      </section>
+      <section class="sobre min">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+          doloremque voluptatibus similique quia sunt aut tenetur, non, voluptas
+          earum accusantium iure dolorem ex reprehenderit incidunt sequi
+          consectetur, hic voluptatum sed.
+        </p>
+      </section>
+      <section class="curiosidades">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+      <section class="causos">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+          accusamus rerum, quas, cumque repellendus at vel deleniti a totam,
+          nihil et atque quia quaerat nam quo harum ipsum quibusdam id!
+        </p>
+      </section>
+      <section class="portfolio">
+        <div class="cards"></div>
+        <div class="cards"></div>
+        <div class="cards"></div>
+        <div class="cards"></div>
+      </section>
+      <section class="rotina">
         <table>
           <thead>
             <tr>
               <th>Dia</th>
+              <th>Manhã</th>
+              <th>Tarde</th>
+              <th>Noite</th>
             </tr>
           </thead>
+          <tbody>
+            <tr>
+              <td>Segunda</td>
+              <td>
+                Aula de física <br />
+                Reunião do P.I. <br />
+                Estudar um pouco de Inglês
+              </td>
+              <td>Trabalho escolar</td>
+              <td>Exercício físico</td>
+            </tr>
+            <tr>
+              <td>Terça</td>
+              <td>Leitura de livro</td>
+              <td>Projetos pessoais</td>
+              <td>Séries ou descanso</td>
+            </tr>
+            <tr>
+              <td>Quarta</td>
+              <td>Estudo de matemática</td>
+              <td>Aulas online</td>
+              <td>Jogo ou lazer</td>
+            </tr>
+            <tr>
+              <td>Quinta</td>
+              <td>Estudo de inglês</td>
+              <td>Revisão de conteúdos</td>
+              <td>Caminhada</td>
+            </tr>
+            <tr>
+              <td>Sexta</td>
+              <td>Rotina livre</td>
+              <td>Projetos de grupo</td>
+              <td>Filme ou socialização</td>
+            </tr>
+            <tr>
+              <td>Sábado</td>
+              <td>Organização do quarto</td>
+              <td>Tempo com a família</td>
+              <td>Saída com amigos</td>
+            </tr>
+            <tr>
+              <td>Domingo</td>
+              <td>Descanso</td>
+              <td>Planejamento da semana</td>
+              <td>Relaxamento</td>
+            </tr>
+          </tbody>
         </table>
-    </section>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
