Mexendo nas section's sobre mim e curiosidades.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
     <main>
       <section class="hero">
-        <div>
+        <div class="hero-content">
           <h2>Projeto Página Pessoal</h2>
           <button>CLICK</button>
         </div>
         <img src="images.png" class="banner" />
       </section>
-      <section class="sobre min">
+      <section class="sobre_min">
+        <h2>Sobre Mim:</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
           doloremque voluptatibus similique quia sunt aut tenetur, non, voluptas
@@ -42,12 +43,13 @@
         </p>
       </section>
       <section class="curiosidades">
+        <h3>Curiosidades:</h3>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Sei pescar</li>
+          <li>Sei cozinhar</li>
+          <li>Adoro viajar</li>
+          <li>Sou fã de música</li>
+          <li>Pratico esportes</li>
         </ul>
       </section>
       <section class="causos">
